slider btns spacing fix

--- a/_sass/slider.sass
+++ b/_sass/slider.sass
@@ -26,22 +26,29 @@
 .slide2
 	background-image: url("cargo-vessel.jpg")
 
-.unslider-arrow
+.slider-btn
+	display: inline-block
 	position: relative
 	bottom: 12em
 	color: transparent
-	border-radius: 10em
+	height: 2em
+	width: 2em
+	border-radius: 2em
 	border-style: solid
 	border-color: red
 	background-image: url("data:image/svg+xml;utf8,<svg width='25' height='20' viewPort='0 0 20 20' version='1.1' xmlns='http://www.w3.org/2000/svg'><line x1='2' y1='2' x2='20' y2='10' stroke='black' stroke-width='1'/><line x1='18' y1='10' x2='2' y2='20' stroke='black' stroke-width='1'/></svg>")
 
-.unslider-arrow.next
-	left: 10%
-	margin-right: 40%
-	transform: rotateX(180deg)
+.slider-btns
+	width: 80%
+	margin-left: auto
+	margin-right: auto
 
-.unslider-arrow.prev
-	margin-left: 40%
+.slider-btn.next
+	margin-left: 47%
+
+.slider-btn.prev
+	margin-right: 47%
+	transform: rotate(180deg)
 
 .unslider-nav
 	display: none
